@@ -1,3 +1,8 @@
+Mon Jul 28 13:10:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Global_Macros.h:
+          Removed obsolete workaround for Borland C++
+
 Mon Jul 28 13:03:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/ace_wchar.h:
